# larpandora

./: CMakeLists.txt
larpandora/LArPandoraAnalysis/: CMakeLists.txt
larpandora/LArPandoraEventBuilding/: CMakeLists.txt  CollectionMerging_module.cc  CollectionSplitting_module.cc  LArPandoraEvent.cxx  LArPandoraEvent.h  LArPandoraExternalEventBuilding_module.cc  LArPandoraTrackCreation_module.cc  NeutrinoIdBaseTool.h  SimpleNeutrinoId_tool.cc  Slice.h
larpandora/LArPandoraEventBuilding/LArPandoraShower/: CMakeLists.txt  LArPandoraModularShowerCreation_module.cc
larpandora/LArPandoraEventBuilding/LArPandoraShower/Algs/: CMakeLists.txt  LArPandoraShowerAlg.cxx  LArPandoraShowerCheatingAlg.cxx  ShowerElementHolder.hh  ShowerProducedPtrsHolder.hh
larpandora/LArPandoraEventBuilding/LArPandoraShower/Tools/: CMakeLists.txt  IShowerTool.h  Shower2DLinearRegressionTrackHitFinder_tool.cc  Shower3DCylinderTrackHitFinder_tool.cc  ShowerBayesianTrucatingdEdx_tool.cc  ShowerIncrementalTrackHitFinder_tool.cc  ShowerLengthPercentile_tool.cc  ShowerLinearEnergy_tool.cc  ShowerNumElectronsEnergy_tool.cc  ShowerPCADirection_tool.cc  ShowerPCAPropergationStartPosition_tool.cc  ShowerPFPVertexStartPosition_tool.cc  ShowerPandoraSlidingFitTrackFinder_tool.cc  ShowerRefinedPCADirection_tool.cc  ShowerTrackColinearTrajPointDirection_tool.cc  ShowerTrackDirection_tool.cc  ShowerTrackHitDirection_tool.cc  ShowerTrackPCADirection_tool.cc  ShowerTrackSpacePointDirection_tool.cc  ShowerTrackTrajPointDirection_tool.cc  ShowerTrackTrajToSpacePoint_tool.cc  ShowerTrajPointdEdx_tool.cc  ShowerUnidirectiondEdx_tool.cc  pandorashowertools.fcl
larpandora/LArPandoraEventBuilding/LArPandoraShower/Tools/Cheating/: CMakeLists.txt  ShowerDirectionCheater_tool.cc  ShowerStartPositionCheater_tool.cc  ShowerTrackFinderCheater_tool.cc
larpandora/LArPandoraInterface/: CMakeLists.txt  LArPandora.cxx  LArPandoraGeometry.cxx  LArPandoraGeometry.h  LArPandoraHelper.cxx  LArPandoraInput.cxx  LArPandoraInput.h  LArPandoraOutput.cxx  LArPandoraOutput.h
ups/: product_deps
